<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".TipCalc"
    android:background="#ff191919">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:textSize="40sp"
        android:layout_centerHorizontal="true"
        android:textColor="#ff0339ff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bill"
        android:id="@+id/bill_textview"
        android:textSize="25sp"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffa611" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip"
        android:textSize="25sp"
        android:id="@+id/tip_textview"
        android:layout_below="@+id/final_amount_textview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#ffffa611" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/final_amount"
        android:textSize="25sp"
        android:id="@+id/final_amount_textview"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/final_amount_edittext"
        android:layout_alignStart="@+id/final_amount_edittext"
        android:textColor="#ffffa611" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:text="@string/bill_ed"
        android:id="@+id/bill_edittext"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:textColor="#ffff1d10" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:id="@+id/tip_edittext"
        android:text="@string/tip_ed"
        android:layout_alignBottom="@+id/tip_textview"
        android:layout_alignLeft="@+id/bill_edittext"
        android:layout_alignStart="@+id/bill_edittext"
        android:layout_alignRight="@+id/bill_edittext"
        android:layout_alignEnd="@+id/bill_edittext"
        android:textColor="#ffff1d10" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:text="@string/final_amount_ed"
        android:id="@+id/final_amount_edittext"
        android:editable="false"
        android:layout_below="@+id/tip_edittext"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#ff00ff1d"
        android:textSize="20sp" />

    <SeekBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tip_seekBar"
        android:layout_alignBottom="@+id/final_amount_edittext"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/radio_avaiability"
        android:layout_alignEnd="@+id/radio_avaiability" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/availability"
        android:textSize="20sp"
        android:id="@+id/availability_title"
        android:layout_below="@+id/intro_friendly"
        android:layout_toRightOf="@+id/tip_textview"
        android:layout_toEndOf="@+id/tip_textview"
        android:textColor="#fffffc0d" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radio_avaiability"
        android:layout_below="@+id/availability_title"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <RadioButton
            android:layout_width="wrap_content"
            android:id="@+id/radio_bad"
            android:textSize="20dp"
            android:text="@string/availability_bad"
            android:layout_height="wrap_content"
            android:textColor="#ffffffff"
            android:background="#ff191919" />
        <RadioButton
            android:layout_width="wrap_content"
            android:textSize="20dp"
            android:id="@+id/radio_okay"
            android:text="@string/availability_okay"
            android:layout_height="wrap_content"
            android:textColor="#ffffffff"
            android:background="#ff191919" />
        <RadioButton
            android:layout_width="wrap_content"
            android:id="@+id/radio_good"
            android:textSize="20dp"
            android:text="@string/availability_good"
            android:layout_height="wrap_content"
            android:textColor="#ffffffff"
            android:background="#ff191919" />


    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:id="@+id/textView2"
        android:layout_below="@+id/tip_seekBar"
        android:layout_toRightOf="@+id/tip_textview"
        android:layout_toEndOf="@+id/tip_textview"
        android:textSize="20dp"
        android:textColor="#fffffc0d" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_friendly"
        android:id="@+id/intro_friendly"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:textColor="#ffffffff"
        android:background="#ff191919" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_specials"
        android:id="@+id/intro_special"
        android:layout_below="@+id/textView2"
        android:layout_alignTop="@+id/intro_friendly"
        android:layout_toRightOf="@+id/intro_friendly"
        android:layout_toEndOf="@+id/intro_friendly"
        android:textSize="20sp"
        android:textColor="#ffffffff"
        android:background="#ff191919" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro_opinions"
        android:id="@+id/intro_opinions"
        android:textSize="20dp"
        android:layout_alignTop="@+id/intro_special"
        android:layout_toRightOf="@+id/intro_special"
        android:layout_toEndOf="@+id/intro_special"
        android:textColor="#ffffffff"
        android:background="#ff191919" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_problem"
        android:layout_below="@+id/radio_avaiability"
        android:entries="@array/problem_array"

        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:touchscreenBlocksFocus="false"
        android:paddingStart="32sp"
        android:paddingEnd="32sp"
        android:background="#fffffc0d"
        style="@style/Base.Widget.AppCompat.TextView.SpinnerItem" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waiting_time"
        android:id="@+id/textView3"
        android:textSize="20dp"
        android:layout_below="@+id/spinner_problem"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textColor="#fffffc0d" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_reset"
        android:id="@+id/button_reset"
        android:background="#ff000000"
        android:layout_alignTop="@+id/button_pause"
        android:layout_toRightOf="@+id/intro_friendly"
        android:layout_toEndOf="@+id/intro_friendly"
        android:textColor="#fffffc0d" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_start"
        android:id="@+id/button_start"
        android:background="#ff000000"
        android:layout_alignTop="@+id/button_pause"
        android:layout_toRightOf="@+id/button_reset"
        android:layout_toEndOf="@+id/button_reset"
        android:textColor="#fffffc0d" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_pause"
        android:id="@+id/button_pause"
        android:background="#ff000000"
        android:layout_below="@+id/textView3"
        android:layout_toRightOf="@+id/button_start"
        android:layout_toEndOf="@+id/button_start"
        android:layout_marginTop="53dp"
        android:textColor="#fffffc0d" />

    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/chronometer"
        android:text="@string/time_init"
        android:textSize="20dp"
        android:layout_alignBottom="@id/textView3"

        android:layout_alignEnd="@+id/final_amount_edittext"
        android:textColor="#ffffffff" />

</RelativeLayout>
